# Raylib_Cmake_StarterTemplate

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  RaylibDefaultProject.cpp  RaylibDefaultProject.h
Game/resources/icon/: icon.aps  icon.rc
Game/source/: main.cpp
